frontend/tests/cases/positive/simple/simple8.gr
main : Int
main = compose (\x -> x + 3) (\x -> x * 5) 10