frontend/tests/cases/negative/different-number-of-args-in-equations.gr
-- foo : Int -> Int
-- foo 1 = 2;
-- foo 1 2 = 3

bar : Int -> Int -> Int
bar 0 = \x -> x;
bar x y = x + y